Fix overflow praktijkgebieden

--- a/wp-content/themes/acv/scss/04-modules/02-components/_accordion.scss
+++ b/wp-content/themes/acv/scss/04-modules/02-components/_accordion.scss
@@ -27,6 +27,7 @@
     &-name {
         @include font-size($heading-size-3);
         margin-bottom: 0;
+        max-width: 85%;
     }
 
     &-description {
